--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ ul.container {
     width: 100%;
     overflow: hidden;
     overflow-x: scroll;
-  /*  box-sizing: border-box;*/
     white-space:nowrap;
     margin: 0;
     box-shadow: 0 0 5px rgba(0,0,0,0.5);
@@ -113,7 +112,9 @@ ul {
     padding: 15px;
 }
 
-
-.ddd {
-    padding: 20px 0;
+.exif-data {
+    margin: 20px 0;
+    max-height: 500px;
+    overflow: auto;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
